--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: nginxのレポジトリ設置
   template:
-    src: ../../../template/nginx.repo
-    dest: /etc/yum.repo.d/nginx.repo
+    src: ../../../template/nginx/nginx.repo
+    dest: /etc/yum.repos.d/nginx.repo
 
 - name: nginxのインストール
   yum: name=nginx state=installed
